--- a/eggShell/src/app/nav/nav.component.html
+++ b/eggShell/src/app/nav/nav.component.html
@@ -1,12 +1,12 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
+  <mat-sidenav #drawer class="sidenav" fixedInViewport 
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#"><mat-icon>egg</mat-icon>Link 1</a>
-      <a mat-list-item href="#"><mat-icon>egg</mat-icon>Link 2</a>
+      <a mat-list-item href="#"><mat-icon>egg</mat-icon>Tojás</a>
+      <!-- <a mat-list-item href="#"><mat-icon>egg</mat-icon>Link 2</a> -->
       <a mat-list-item href="#"><mat-icon>settings</mat-icon>Beállítások</a>
     </mat-nav-list>
   </mat-sidenav>
