--- a/eggShell/src/styles.scss
+++ b/eggShell/src/styles.scss
@@ -12,15 +12,15 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$eggShell-primary: mat.define-palette(mat.$indigo-palette);
-$eggShell-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$eggShell-primary: mat.define-palette(mat.$cyan-palette, 300);
+$eggShell-accent: mat.define-palette(mat.$deep-purple-palette, 300, 200, 400);
 
 // The warn palette is optional (defaults to red).
 $eggShell-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$eggShell-theme: mat.define-light-theme((
+$eggShell-light-theme: mat.define-light-theme((
   color: (
     primary: $eggShell-primary,
     accent: $eggShell-accent,
@@ -31,7 +31,7 @@ $eggShell-theme: mat.define-light-theme((
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($eggShell-theme);
+@include mat.all-component-themes($eggShell-light-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
