--- a/eggShell/src/app/components/nav/nav.component.html
+++ b/eggShell/src/app/components/nav/nav.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#"><mat-icon>egg</mat-icon>Tojás</a>
+      <a mat-list-item routerLink="/add-egg" routerLinkActive="active"><mat-icon>egg</mat-icon>Tojás</a>
       <!-- <a mat-list-item href="#"><mat-icon>egg</mat-icon>Link 2</a> -->
-      <a mat-list-item href="#"><mat-icon>settings</mat-icon>Beállítások</a>
+      <a mat-list-item routerLink="/settings" routerLinkActive="active"><mat-icon>settings</mat-icon>Beállítások</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
