--- a/eggShell/src/app/components/nav/nav.component.html
+++ b/eggShell/src/app/components/nav/nav.component.html
@@ -1,13 +1,35 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport 
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar color="primary">Menu</mat-toolbar>
+      [mode]="(isHandset$ | async) ? 'over' : 'over'"
+      [opened]="false"> 
+      <!-- [mode]="(isHandset$ | async) ? 'over' : 'side'" -->
+      <!-- [opened]="(isHandset$ | async) === false"> -->
+    <mat-toolbar color="primary">
+      <button type="button" aria-label="Close sidenav" mat-icon-button (click)="drawer.toggle()">
+        <!-- *ngIf="isHandset$ | async"> -->
+        <mat-icon aria-label="Side nav close icon">close</mat-icon>
+      </button>
+      <!-- Menü -->
+    </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/add-egg" routerLinkActive="active"><mat-icon>egg</mat-icon>Tojás</a>
+      <a mat-list-item routerLink="/" routerLinkActive="active" (click)="drawer.toggle()">
+        <mat-icon>home</mat-icon>
+        Főoldal
+      </a>
+      <a mat-list-item routerLink="/add-egg" routerLinkActive="active" (click)="drawer.toggle()">
+        <mat-icon>egg</mat-icon>
+        Tojás
+      </a>
+      <a mat-list-item routerLink="/add-egg" routerLinkActive="active" (click)="drawer.toggle()">
+        <mat-icon>restaurant_menu</mat-icon>
+        Táp
+      </a>
       <!-- <a mat-list-item href="#"><mat-icon>egg</mat-icon>Link 2</a> -->
-      <a mat-list-item routerLink="/settings" routerLinkActive="active"><mat-icon>settings</mat-icon>Beállítások</a>
+      <a mat-list-item routerLink="/settings" routerLinkActive="active" (click)="drawer.toggle()">
+        <mat-icon>settings</mat-icon>
+        Beállítások
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -16,8 +38,8 @@
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+        (click)="drawer.toggle()">
+        <!-- *ngIf="isHandset$ | async"> -->
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>eggShell</span>
@@ -28,5 +50,6 @@
       </div>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
