--- a/eggShell/src/app/components/nav/nav.component.html
+++ b/eggShell/src/app/components/nav/nav.component.html
@@ -3,6 +3,7 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'over'"
       [opened]="false"> 
+      <!-- [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" -->
       <!-- [mode]="(isHandset$ | async) ? 'over' : 'side'" -->
       <!-- [opened]="(isHandset$ | async) === false"> -->
     <mat-toolbar color="primary">
@@ -13,22 +14,58 @@
       <!-- Menü -->
     </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/" routerLinkActive="active" (click)="drawer.toggle()">
+      <a *ngIf="isLoggedIn"
+        mat-list-item routerLink="/" routerLinkActive="active" (click)="drawer.toggle()">
         <mat-icon>home</mat-icon>
-        Főoldal
+        <span>Főoldal</span>
       </a>
-      <a mat-list-item routerLink="/add-egg" routerLinkActive="active" (click)="drawer.toggle()">
+      <a *ngIf="isLoggedIn"
+        mat-list-item routerLink="/add-egg" routerLinkActive="active" (click)="drawer.toggle()">
         <mat-icon>egg</mat-icon>
-        Tojás
+        <span>Tojás</span>
       </a>
-      <a mat-list-item routerLink="/add-egg" routerLinkActive="active" (click)="drawer.toggle()">
+      <a *ngIf="isLoggedIn"
+        mat-list-item routerLink="/add-egg" routerLinkActive="active" (click)="drawer.toggle()">
         <mat-icon>restaurant_menu</mat-icon>
-        Táp
+        <span>Táp</span>
       </a>
-      <!-- <a mat-list-item href="#"><mat-icon>egg</mat-icon>Link 2</a> -->
-      <a mat-list-item routerLink="/settings" routerLinkActive="active" (click)="drawer.toggle()">
+      <a *ngIf="isLoggedIn"
+        mat-list-item routerLink="/add-egg" routerLinkActive="active" 
+        (click)="drawer.toggle()">
+        <mat-icon>trending_up</mat-icon>
+        <span>Statisztikák</span>
+      </a>
+      <a *ngIf="isLoggedIn"
+        mat-list-item routerLink="/settings" routerLinkActive="active" 
+        (click)="drawer.toggle()">
         <mat-icon>settings</mat-icon>
-        Beállítások
+        <span 
+          [matBadge]="badgeCounter.settings" 
+          [matBadgeHidden]="badgeCounter.settings > 0 ? false : true"
+          matBadgeColor="warn"
+          matBadgeOverlap="false">
+          Beállítások
+        </span>
+      </a>
+      <a *ngIf="!isLoggedIn"
+        mat-list-item routerLink="/add-egg" routerLinkActive="active" 
+        (click)="drawer.toggle()">
+        <mat-icon>person_add</mat-icon>
+        <span>Regisztráció</span>
+      </a>
+      <a *ngIf="!isLoggedIn"
+        mat-list-item routerLink="/add-egg" routerLinkActive="active" 
+        (click)="drawer.toggle()"
+        (click)="login()">
+        <mat-icon>login</mat-icon>
+        <span>Belépés</span>
+      </a>
+      <a *ngIf="isLoggedIn"
+        mat-list-item routerLink="/add-egg" routerLinkActive="active" 
+        (click)="drawer.toggle()"
+        (click)="logout()">
+        <mat-icon>logout</mat-icon>
+        <span>Kilépés</span>
       </a>
     </mat-nav-list>
   </mat-sidenav>
@@ -42,11 +79,33 @@
         <!-- *ngIf="isHandset$ | async"> -->
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>eggShell</span>
+      <span *ngIf="!(isHandset$ | async) || !isLoggedIn">eggshell</span>
+      <!-- <span>{{isHandset$ | async}}</span> -->
       <div class="icons">
-        <mat-icon>login</mat-icon>
-        <mat-icon>person_add</mat-icon>
-        <mat-icon>logout</mat-icon>
+        <mat-icon 
+            *ngIf="!isLoggedIn" (click)="login()"
+            matTooltip="Belépés"
+            matTooltipPosition="below"
+            matTooltipShowDelay=250
+            matTooltipHideDelay=500>
+          login
+        </mat-icon>
+        <mat-icon 
+            *ngIf="!isLoggedIn"
+            matTooltip="Regisztráció"
+            matTooltipPosition="below"
+            matTooltipShowDelay=250
+            matTooltipHideDelay=500>
+          person_add
+        </mat-icon>
+        <mat-icon 
+            *ngIf="isLoggedIn" (click)="logout()"
+            matTooltip="Kilépés"
+            matTooltipPosition="below"
+            matTooltipShowDelay=250
+            matTooltipHideDelay=500>
+          logout
+        </mat-icon>
       </div>
     </mat-toolbar>
     <!-- Add Content Here -->
