--- a/eggShell/src/styles.scss
+++ b/eggShell/src/styles.scss
@@ -35,6 +35,15 @@ $eggShell-light-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
+html, body { 
+  height: 100%; 
+  width: 100%;
+  // max-width: 100%;
+}
+
+body { 
+  margin: 0; 
+  font-family: "Helvetica Neue", sans-serif; 
+  
+}
 // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
