--- a/eggShell/src/styles.scss
+++ b/eggShell/src/styles.scss
@@ -47,3 +47,42 @@ body {
   
 }
 // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.snackbar-ok {
+    background: #1b5e20;
+    color: whitesmoke;
+    box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.8);
+}
+.snackbar-error {
+    background: #610101;
+    color: whitesmoke;
+    box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.8);
+}
+
+.form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .form {
+        width: 20em;
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 1em 0;
+        margin: 0 auto;
+        border-radius: 1em;
+
+        h2 {
+            text-align: center;
+            font-weight: 400;
+        }
+
+        .submit-button {
+            margin: 3em auto 1em;
+        }
+    }
+}
