--- a/eggShell/src/app/components/registration/registration.component.html
+++ b/eggShell/src/app/components/registration/registration.component.html
@@ -7,7 +7,7 @@
 
             <mat-form-field appearance="standard">
                 <mat-label>felhasználónév</mat-label>
-                <input matInput placeholder="felhasználónév" formControlName="username" required>
+                <input type="text" matInput placeholder="felhasználónév" formControlName="username" required>
                 <mat-error *ngIf="username.invalid 
                     && (
                         username.dirty || 
