--- a/eggShell/src/app/components/nav/nav.component.html
+++ b/eggShell/src/app/components/nav/nav.component.html
@@ -113,6 +113,7 @@
       </div>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <app-barton></app-barton>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
