--- a/eggShell/src/app/components/barton/barton.component.html
+++ b/eggShell/src/app/components/barton/barton.component.html
@@ -3,8 +3,9 @@
         <h2>Udvar lakói</h2>
 
         <div class="poultry-list" cdkDropList [cdkDropListData]="barton" (cdkDropListDropped)="drop($event)">
-            <div class="items" *ngFor="let item of barton; index as i" cdkDrag [matBadge]="item.qty" matBadgeColor="accent"
-                (click)="openDialog(item, i)" >
+            <div [id]="i" class="items" *ngFor="let item of barton; index as i" cdkDrag [matBadge]="item.qty" matBadgeColor="accent"
+                [matMenuTriggerFor]="menu" (click)="logger(item)">
+                <!-- (click)="openDialog(item, i)" > -->
             <!-- <div class="items" *ngFor="let item of barton; index as i" cdkDrag [matBadge]="item.qty" matBadgeColor="accent"
                 (click)="selectedItem = selectedItem === item ? null : item" (click)="openMenu(i, item)" cdkOverlayOrigin #trigger="cdkOverlayOrigin"> -->
                 <!-- (click)="openMenu(i)" cdkOverlayOrigin #trigger="cdkOverlayOrigin"> -->
@@ -27,6 +28,10 @@
                     </form> -->
                 <!-- </ng-template> -->
                 <!-- [ngStyle]="{'background-image': 'url(' + item.image + ')'}"> -->
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="item.qty=item.qty+1" (click)="$event.stopPropagation()">+</button>
+                    <button mat-menu-item (click)="item.qty=item.qty-1" (click)="$event.stopPropagation()">-</button>
+                </mat-menu>
                 <img [src]="item.image" alt="">
                 <h4 *ngIf="!item.customName">{{item.species}} {{i}}</h4>
                 <h4 *ngIf="item.customName">{{item.customName}}</h4>
