--- a/eggShell/src/app/components/barton/barton.component.html
+++ b/eggShell/src/app/components/barton/barton.component.html
@@ -3,10 +3,10 @@
         <h2>Udvar lakói</h2>
 
         <div class="poultry-list" cdkDropList [cdkDropListData]="barton" (cdkDropListDropped)="drop($event)">
-            <div [id]="i" class="items" *ngFor="let item of barton; index as i" cdkDrag [matBadge]="item.qty" matBadgeColor="accent"
-                [matMenuTriggerFor]="menu" (click)="logger(item)">
+            <div [id]="i" class="items" *ngFor="let item of barton; index as i" cdkDrag [matBadge]="item.quantity"
+                matBadgeColor="accent" [matMenuTriggerFor]="menu" (click)="logger(item)">
                 <!-- (click)="openDialog(item, i)" > -->
-            <!-- <div class="items" *ngFor="let item of barton; index as i" cdkDrag [matBadge]="item.qty" matBadgeColor="accent"
+                <!-- <div class="items" *ngFor="let item of barton; index as i" cdkDrag [matBadge]="item.qty" matBadgeColor="accent"
                 (click)="selectedItem = selectedItem === item ? null : item" (click)="openMenu(i, item)" cdkOverlayOrigin #trigger="cdkOverlayOrigin"> -->
                 <!-- (click)="openMenu(i)" cdkOverlayOrigin #trigger="cdkOverlayOrigin"> -->
                 <!-- <ng-template cdkConnectedOverlay [cdkConnectedOverlayOrigin]="trigger"
@@ -14,7 +14,7 @@
                     (backdropClick)="isOpen=false"> -->
                 <!-- <ng-template cdkConnectedOverlay [cdkConnectedOverlayOrigin]="trigger"
                     [cdkConnectedOverlayOpen]="item.isOpen"> -->
-                    <!-- <form class="item-form" ngForm>
+                <!-- <form class="item-form" ngForm>
                         <mat-form-field class="form-field" appearance="standard">
                             <mat-label>egyedszám</mat-label>
                             <input type="number" matInput placeholder="egyedszám" [value]="item.qty">
@@ -28,14 +28,39 @@
                     </form> -->
                 <!-- </ng-template> -->
                 <!-- [ngStyle]="{'background-image': 'url(' + item.image + ')'}"> -->
-                <mat-menu #menu="matMenu">
-                    <button mat-menu-item (click)="item.qty=item.qty+1" (click)="$event.stopPropagation()">+</button>
-                    <button mat-menu-item (click)="item.qty=item.qty-1" (click)="$event.stopPropagation()">-</button>
+                <mat-menu #menu="matMenu" (click)="$event.stopPropagation()">
+                    <form class="item-form" ngForm mat-menu-item>
+                        <mat-form-field class="form-field" appearance="standard" >
+                            <mat-label>egyedszám</mat-label>
+                            <div>
+                                <button  mat-icon-button type="button"
+                                    (click)="item.quantity=item.quantity-1" 
+                                    (click)="$event.stopPropagation()">
+                                    <mat-icon>remove</mat-icon>
+                                </button>
+                                <input type="number" matInput placeholder="egyedszám" [value]="item.quantity"
+                                    (click)="$event.stopPropagation()">
+                                <button  mat-icon-button type="button"
+                                    (click)="item.quantity=item.quantity+1" 
+                                    (click)="$event.stopPropagation()">
+                                    <mat-icon>add</mat-icon>
+                                </button>
+                            </div>
+                        </mat-form-field>
+
+                        <mat-form-field class="form-field" appearance="standard">
+                            <mat-label>név</mat-label>
+                            <input type="text" matInput placeholder="egyedi név" [value]="item.customName || ''"
+                                (click)="$event.stopPropagation()"
+                                (input)="item.customName">
+                        </mat-form-field>
+                        <!-- <p>{{item}}</p> -->
+                    </form>
                 </mat-menu>
                 <img [src]="item.image" alt="">
                 <h4 *ngIf="!item.customName">{{item.species}} {{i}}</h4>
                 <h4 *ngIf="item.customName">{{item.customName}}</h4>
-                <h6 >{{item.isOpen}}</h6>
+                <!-- <h6>{{item.isOpen}}</h6> -->
             </div>
         </div>
     </div>
@@ -46,8 +71,8 @@
         <div class="poultry-list" cdkDropList [cdkDropListData]="poultry" (cdkDropListDropped)="drop($event)">
             <div class="items" *ngFor="let item of poultry" cdkDrag>
                 <!-- [ngStyle]="{'background-image': 'url(' + item.image + ')'}"> -->
-                <img  [src]="item.image" alt="">
-                <h4 >{{item.species}}</h4>
+                <img [src]="item.image" alt="">
+                <h4>{{item.species}}</h4>
             </div>
         </div>
     </div>
