--- a/eggShell/src/app/components/barton/barton.component.scss
+++ b/eggShell/src/app/components/barton/barton.component.scss
@@ -70,6 +70,7 @@ div {
 
 .item-form {
     width: 10em;
+    min-height: 14em;
     display: flex;
     flex-direction: column;
     align-items: center;
