--- a/eggShell/src/styles.scss
+++ b/eggShell/src/styles.scss
@@ -1,4 +1,4 @@
-
+// @import "../node_modules/@angular/material/core/core-theme";
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
