--- a/eggShell/src/app/components/nav/nav.component.html
+++ b/eggShell/src/app/components/nav/nav.component.html
@@ -2,12 +2,13 @@
   <mat-sidenav #drawer class="sidenav" fixedInViewport 
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'over'"
+      position="end"
       [opened]="false"> 
       <!-- [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" -->
       <!-- [mode]="(isHandset$ | async) ? 'over' : 'side'" -->
       <!-- [opened]="(isHandset$ | async) === false"> -->
     <mat-toolbar color="primary">
-      <button type="button" aria-label="Close sidenav" mat-icon-button (click)="drawer.toggle()">
+      <button class="close-btn" type="button" aria-label="Close sidenav" mat-icon-button (click)="drawer.toggle()">
         <!-- *ngIf="isHandset$ | async"> -->
         <mat-icon aria-label="Side nav close icon">close</mat-icon>
       </button>
@@ -75,14 +76,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()">
-        <!-- *ngIf="isHandset$ | async"> -->
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
+      
       <span *ngIf="!(isHandset$ | async) || !isLoggedIn">eggshell</span>
       <!-- <span>{{isHandset$ | async}}</span> -->
       <div class="icons">
@@ -110,9 +104,20 @@
             matTooltipHideDelay=500>
           logout
         </mat-icon>
+        <button
+          type="button"
+          aria-label="Toggle sidenav"
+          mat-icon-button
+          (click)="drawer.toggle()">
+          <!-- *ngIf="isHandset$ | async"> -->
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        </button>
       </div>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <div class="progress">
+      <mat-progress-bar mode="indeterminate" *ngIf="progress.isLoading"></mat-progress-bar>
+    </div>
     <app-barton></app-barton>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
