--- a/eggShell/src/app/components/nav/nav.component.scss
+++ b/eggShell/src/app/components/nav/nav.component.scss
@@ -32,13 +32,35 @@
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .mat-toolbar {
   display: flex;
   justify-content: space-between;
-  
+  align-items: center;
+  span {
+    display: inherit;
+    align-items: center;
+    font-weight: 300;
+    img {
+      margin-right: 0.25em;
+      width: 2em;
+    }
+  }
+
+  .user {
+    font-size: medium;
+    margin-right: 1em;
+    img {
+      width: 1.5em;
+      // padding: 0.1em;
+      // background: currentColor;
+      background: white;
+      border-radius: 50%;
+    }
+  }
+
   .icons {
     display: inherit;
     align-items: center;
