--- a/eggShell/src/app/components/registration/registration.component.html
+++ b/eggShell/src/app/components/registration/registration.component.html
@@ -3,7 +3,7 @@
     <form class="form" [formGroup]="userReg" (ngSubmit)="regUser(userReg.value)">
         <ng-container>
 
-            <h2 mat-dialog-title>regisztráció</h2>
+            <!-- <h2 mat-dialog-title>regisztráció</h2> -->
             
             <mat-form-field appearance="standard">
                 <mat-label>email cím</mat-label>
@@ -76,7 +76,7 @@
 
             <div mat-dialog-actions>
                 <button type="submit" class="submit-button" [disabled]="userReg.invalid" mat-raised-button
-                    mat-dialog-close color="primary">regisztrálok</button>
+                    color="primary">regisztrálok</button>
             </div>
 
         </ng-container>
